delete button not showing fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -111,7 +111,6 @@ body,
       padding: 5px;
       padding-bottom: 0;
       position: relative;
-      overflow: hidden;
 
       &.d-none {
         display: none;
